--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
 	   				</div>
 
 	   				<div class="timeline-header">
-	   					<h3>Bachelor Degre</h3>
+	   					<h3>Bachelor Degree</h3>
 	   					<p>August 2016 - September 2020</p>
 	   				</div>
 
