--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 
    				<img src="images/profile-pic.jpg" alt="Profile Picture">
 
-   				<p class="lead">Hi, my name is Riski and i am a Software Developer from Depok. I have experience in Business Intelligence and Software Developer, also i am good at Robotic Process Automation and UI/UX Designer. I have developed my skill, and very confident that I can make a real and positive contribution to the company that I work.</p>
+   				<p class="lead">Hi, my name is Riski and i am a Software Developer from Depok. Experienced BI consultant with a history ofwork in the information technology andservices industry. Skilled in visualizing datawith Tableau, Power BI and several otherexpertise in web development, database andgraphic design. Strong information technologyprofessional with a Bachelor's degree focusedon Information Technology.</p>
    			</div>   			
 
    		</div>   		
@@ -128,31 +128,31 @@
 
 				<ul class="skill-bars">
 				   <li>
-				   	<div class="progress percent90"><span>90%</span></div>
+				   	<div class="progress percent90"><span>92%</span></div>
 				   	<strong>Business Intelligence</strong>
 				   </li>
 				   <li>
-				   	<div class="progress percent95"><span>95%</span></div>
+				   	<div class="progress percent95"><span>86%</span></div>
 				   	<strong>Graphic Design</strong>
 				   </li>
 				   <li>
-				   	<div class="progress percent75"><span>75%</span></div>
+				   	<div class="progress percent75"><span>74%</span></div>
 				   	<strong>Microsoft Dynamic 365</strong>
 				   </li>
 				   <li>
-				   	<div class="progress percent85"><span>85%</span></div>
+				   	<div class="progress percent85"><span>87%</span></div>
 				   	<strong>RPA</strong>
 				   </li>
 				   <li>
-				   	<div class="progress percent70"><span>70%</span></div>
+				   	<div class="progress percent70"><span>73%</span></div>
 				   	<strong>PHP</strong>
 				   </li>
 				   <li>
-				   	<div class="progress percent85"><span>85%</span></div>
+				   	<div class="progress percent85"><span>87%</span></div>
 				   	<strong>Network Infrastructure</strong>
 				   </li>
 				   <li>
-				   	<div class="progress percent80"><span>80%</span></div>
+				   	<div class="progress percent80"><span>85%</span></div>
 				   	<strong>CSS</strong>
 				   </li>
       
@@ -244,6 +244,26 @@
    		<div class="col-twelve">
 
    			<div class="timeline-wrap">
+
+   				<div class="timeline-block">
+
+	   				<div class="timeline-ico">
+	   					<i class="fa fa-briefcase"></i>
+	   				</div>
+
+	   				<div class="timeline-header">
+	   					<h3>BI Technical Consultant</h3>
+	   					<p>february 2022 - Present</p>
+	   				</div>
+
+	   				<div class="timeline-content">
+	   					<h4>PT Soltius Indonesia</h4>
+	   					<p>Data Visualization (Tableau/Power BI)<p>
+	   					<p>Data Staging<p>
+	   					<p>Data Analyst<p>
+	   				</div>
+
+	   			</div> <!-- /timeline-block -->
 
    				<div class="timeline-block">
 
