--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
 
 	   				<div class="timeline-header">
 	   					<h3>Software Developer</h3>
-	   					<p>April 2021 - Present</p>
+	   					<p>April 2021 - January 2022</p>
 	   				</div>
 
 	   				<div class="timeline-content">
