--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
 
 	   			<p class="intro-position">
 	   				<span>Business Intelligence Developer</span>
+					<span>Data Analyst</span>
 	   				<span>Software Developer</span>
 	   				<span>Front-end Developer</span>
 	   				<span>UI/UX Designer</span> 
