--- a/index.html
+++ b/index.html
@@ -51,10 +51,10 @@
 	   			<p class="intro-position">
 	   				<span>Business Intelligence Developer</span>
 					<span>Data Analyst</span>
-	   				<span>Software Developer</span>
 	   				<span>Front-end Developer</span>
 	   				<span>UI/UX Designer</span> 
-	   				<span>Robotic Process Automation Developer</span> 
+	   				<span>Robotic Process Automation Developer</span>
+					<span>Software Developer</span>
 	   			</p>
 
 	   			<a class="button stroke smoothscroll" href="#about" title="">More About Me</a>
@@ -88,7 +88,7 @@
 
    				<img src="images/profile-pic.jpg" alt="Profile Picture">
 
-   				<p class="lead">Hi, my name is Riski and i am a Software Developer from Depok. Experienced BI consultant with a history of work in the information technology and services industry. Skilled in visualizing data with Tableau, Power BI and several other expertise in web development, database and graphic design. Strong information technology professional with a Bachelor's degree focusedon Information Technology.</p>
+   				<p class="lead">Hi, my name is Riski. As a skilled Data Analyst and Data Visualization Engineer with 4 years of experience in using SQL query, Tableau, Power BI, and Robotic Process Automation (RPA), I am looking for a challenging experience where I can use my technical expertise and data processing skills to make data-driven decisions. I want to work with a dynamic and innovative team that values collaboration and creativity to deliver high-quality solutions.</p>
    			</div>   			
 
    		</div>   		
@@ -99,7 +99,7 @@
    		<div class="col-six tab-full">
 
    			<h3>Profile</h3>
-   			<p>Bachelor of Informatics Engineering. I am a full-time learner who loves to code to create amazing things. I am interested in Software Development and have some experiences in this field by working on projects. I am has eagerness to help & eagerness to share.</p>
+   			<p>Experienced BI consultant with a history of work in the information technology and services industry. Skilled in visualizing data with Tableau, Power BI and several other expertise in web development, database and graphic design. Strong information technology professional with a Bachelor's degree focusedon Information Technology.</p>
 
    			<ul class="info-list">
    				<li>
@@ -107,8 +107,8 @@
    					<span>Riski Afrialam</span>
    				</li>
    				<li>
-   					<strong>Birth Date:</strong>
-   					<span>5 Februari 1998</span>
+   					<strong>Portofolio Tableau Data Visualization:</strong>
+   					<span>https://public.tableau.com/app/profile/riski.afrialam/vizzes</span>
    				</li>
    				<li>
    					<strong>Website Blog:</strong>
@@ -134,22 +134,22 @@
 				   </li>
 				   <li>
 				   	<div class="progress percent85"><span>85%</span></div>
-				   	<strong>Graphic Design</strong>
+				   	<strong>SQL and Oracle Query</strong>
 				   </li>
 				   <li>
 				   	<div class="progress percent75"><span>75%</span></div>
 				   	<strong>Microsoft Dynamic 365</strong>
 				   </li>
 				   <li>
-				   	<div class="progress percent85"><span>85%</span></div>
-				   	<strong>RPA</strong>
+				   	<div class="progress percent85"><span>80%</span></div>
+				   	<strong>RPA (UIpath)</strong>
 				   </li>
 				   <li>
 				   	<div class="progress percent75"><span>75%</span></div>
 				   	<strong>PHP</strong>
 				   </li>
 				   <li>
-				   	<div class="progress percent85"><span>85%</span></div>
+				   	<div class="progress percent85"><span>80%</span></div>
 				   	<strong>Network Infrastructure</strong>
 				   </li>
 				   <li>
@@ -259,7 +259,7 @@
 
 	   				<div class="timeline-content">
 	   					<h4>PT Soltius Indonesia</h4>
-	   					<p>Data Visualization (Tableau/Power BI)<p>
+	   					<p>As an Technical Consultant and Data Analyst, my responsibilities encompass a wide range of tasks, starting from understanding the business needs and objectives of clients. with designing and implementing data structures, including data warehouses and marts, to facilitate the collection and integration of data from various sources. Extracting, transforming, and loading (ETL) data processes will be part of your routine to ensure that data is cleansed and formatted appropriately for analysis. Developing interactive dashboards and reports that visualize key metrics and trends with Tableau and Power BI. Consulting with clients to provide guidance on utilizing BI solutions effectively and conducting user training sessions.<p>
 	   					<p>Data Staging<p>
 	   					<p>Data Analyst<p>
 	   				</div>
