--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
    					<span>Riski Afrialam</span>
    				</li>
    				<li>
-   					<strong>Portofolio Tableau Data Visualization:</strong>
+   					<strong>Portofolio Tableau:</strong>
    					<span>https://public.tableau.com/app/profile/riski.afrialam/vizzes</span>
    				</li>
    				<li>
@@ -260,8 +260,6 @@
 	   				<div class="timeline-content">
 	   					<h4>PT Soltius Indonesia</h4>
 	   					<p>As an Technical Consultant and Data Analyst, my responsibilities encompass a wide range of tasks, starting from understanding the business needs and objectives of clients. with designing and implementing data structures, including data warehouses and marts, to facilitate the collection and integration of data from various sources. Extracting, transforming, and loading (ETL) data processes will be part of your routine to ensure that data is cleansed and formatted appropriately for analysis. Developing interactive dashboards and reports that visualize key metrics and trends with Tableau and Power BI. Consulting with clients to provide guidance on utilizing BI solutions effectively and conducting user training sessions.<p>
-	   					<p>Data Staging<p>
-	   					<p>Data Analyst<p>
 	   				</div>
 
 	   			</div> <!-- /timeline-block -->
@@ -279,9 +277,8 @@
 
 	   				<div class="timeline-content">
 	   					<h4>PT Mitra Solusi Telematika</h4>
-	   					<p>Robotic Process Automation Developer<p>
-	   					<p>Application Developer & Support Microsoft Dynamic 365<p>
-	   					<p>Power BI Data Visualization<p>
+	   					<p>As a Software Developer, I have developed technical solutions to create an automatic process from the SAP system to tax reports, then carry out monitoring from the automatic system that has been created. I also support and monitor the Microsoft Power Apps application that has been created. I had the opportunity to work on exciting BI projects. My responsibilities included creating mockup layout visualizations using Power BI, analyzing client data, and assisting in the development of ETL for data in Tableau. I also created a range of dashboards tailored to client needs, including sales, inventory, CRM, and others. I played a crucial role in the development of Tableau for client servers, ensuring the
+smooth publishing of visualizations.<p>
 	   				</div>
 
 	   			</div> <!-- /timeline-block -->
