--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 
    				<img src="images/profile-pic.jpg" alt="Profile Picture">
 
-   				<p class="lead">Hi, my name is Riski. As a skilled Data Analyst and Data Visualization Engineer with 4 years of experience in using SQL query, Tableau, Power BI, and Robotic Process Automation (RPA), I am looking for a challenging experience where I can use my technical expertise and data processing skills to make data-driven decisions. I want to work with a dynamic and innovative team that values collaboration and creativity to deliver high-quality solutions.</p>
+   				<p class="lead">Hi, my name is Riski. As a skilled Data Analyst and Data Visualization Engineer with 4 years of experience in using SQL an Oracle query, Tableau, Power BI, and Robotic Process Automation (RPA), I am looking for a challenging experience where I can use my technical expertise and data processing skills to make data-driven decisions. I want to work with a dynamic and innovative team that values collaboration and creativity to deliver high-quality solutions.</p>
    			</div>   			
 
    		</div>   		
@@ -296,9 +296,7 @@ smooth publishing of visualizations.<p>
 
 	   				<div class="timeline-content">
 	   					<h4>PT Arkana Solusi Teknologi</h4>
-	   					<p>Tableau Data Visualization</p>
-	   					<p>Data Analyst</p>
-	   					<p>Data Engineer</p>
+	   					<p>During my tenure as a Business Intelligence Developer here, I had the opportunity to work on various exciting BI projects, where I contributed to creating insightful and impactful data visualizations using Tableau. My primary responsibilities included analyzing client data, developing ETL processes, and creating customized dashboards tailored to their specific needs. Through my expertise in Tableau, I was able to create compelling mockup layout visualizations that effectively communicated complex data insights to clients. Furthermore, I played a critical role in the deployment of Tableau for client servers, ensuring that the visualizations were published smoothly and accurately. Overall, my experience at PT Arkana Solusi Teknologi has equipped me with a diverse range of skills and</p>
 	   				</div>
 
 	   			</div> <!-- /timeline-block -->
