--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 	   			<p class="intro-position">
 	   				<span>Business Intelligence Developer</span>
 					<span>Data Analyst</span>
-	   				<span>Front-end Developer</span>
+	   				<span>Data Visualization</span>
 	   				<span>UI/UX Designer</span> 
 	   				<span>Robotic Process Automation Developer</span>
 					<span>Software Developer</span>
@@ -88,7 +88,7 @@
 
    				<img src="images/profile-pic.jpg" alt="Profile Picture">
 
-   				<p class="lead">Hi, my name is Riski. As a skilled Data Analyst and Data Visualization Engineer with 4 years of experience in using SQL an Oracle query, Tableau, Power BI, and Robotic Process Automation (RPA), I am looking for a challenging experience where I can use my technical expertise and data processing skills to make data-driven decisions. I want to work with a dynamic and innovative team that values collaboration and creativity to deliver high-quality solutions.</p>
+   				<p class="lead">Hi, my name is Riski. As a skilled Data Analyst and Data Visualization Engineer, experience in Business Intelligence implementation to support business decisions. Including full life cycle experience in performing user requirement, data modelling, analysis, design, configuration, testing and production support. I want to work with a dynamic and innovative team that values collaboration and creativity to deliver high quality solutions.</p>
    			</div>   			
 
    		</div>   		
@@ -137,24 +137,24 @@
 				   	<strong>SQL and Oracle Query</strong>
 				   </li>
 				   <li>
-				   	<div class="progress percent75"><span>75%</span></div>
-				   	<strong>Microsoft Dynamic 365</strong>
+				   	<div class="progress percent90"><span>90%</span></div>
+				   	<strong>Data Visualization</strong>
 				   </li>
 				   <li>
-				   	<div class="progress percent85"><span>80%</span></div>
+				   	<div class="progress percent75"><span>75%</span></div>
 				   	<strong>RPA (UIpath)</strong>
 				   </li>
 				   <li>
-				   	<div class="progress percent75"><span>75%</span></div>
-				   	<strong>PHP</strong>
-				   </li>
-				   <li>
-				   	<div class="progress percent85"><span>80%</span></div>
-				   	<strong>Network Infrastructure</strong>
+				   	<div class="progress percent95"><span>95%</span></div>
+				   	<strong>Tableau</strong>
 				   </li>
 				   <li>
 				   	<div class="progress percent85"><span>85%</span></div>
-				   	<strong>CSS</strong>
+				   	<strong>Power BI</strong>
+				   </li>
+				   <li>
+				   	<div class="progress percent85"><span>85%</span></div>
+				   	<strong>Figma for Design</strong>
 				   </li>
       
 				</ul> <!-- /skill-bars -->		
@@ -253,13 +253,13 @@
 	   				</div>
 
 	   				<div class="timeline-header">
-	   					<h3>BI Technical Consultant</h3>
+	   					<h3>Data Analyst & BI Technical Consultant</h3>
 	   					<p>February 2022 - Present</p>
 	   				</div>
 
 	   				<div class="timeline-content">
 	   					<h4>PT Soltius Indonesia</h4>
-	   					<p>As an Technical Consultant and Data Analyst, my responsibilities encompass a wide range of tasks, starting from understanding the business needs and objectives of clients. with designing and implementing data structures, including data warehouses and marts, to facilitate the collection and integration of data from various sources. Extracting, transforming, and loading (ETL) data processes will be part of your routine to ensure that data is cleansed and formatted appropriately for analysis. Developing interactive dashboards and reports that visualize key metrics and trends with Tableau and Power BI. Consulting with clients to provide guidance on utilizing BI solutions effectively and conducting user training sessions.<p>
+	   					<p>As an BI Technical Consultant and Data Analyst, my responsibilities encompass a wide range of tasks, starting from understanding the business needs and objectives of clients. with designing and implementing data structures, including data warehouses and marts, to facilitate the collection and integration of data from various sources. Extracting, transforming, and loading (ETL) data processes will be part of your routine to ensure that data is cleansed and formatted appropriately for analysis. Developing interactive dashboards and reports that visualize key metrics and trends with Tableau and Power BI. Consulting with clients to provide guidance on utilizing BI solutions effectively and conducting user training sessions.<p>
 	   				</div>
 
 	   			</div> <!-- /timeline-block -->
