--- a/index.html
+++ b/index.html
@@ -259,8 +259,13 @@
 
 	   				<div class="timeline-content">
 	   					<h4>PT Soltius Indonesia</h4>
-	   					<p>As an BI Technical Consultant and Data Analyst, my responsibilities encompass a wide range of tasks, starting from understanding the business needs and objectives of clients. with designing and implementing data structures, including data warehouses and marts, to facilitate the collection and integration of data from various sources. Extracting, transforming, and loading (ETL) data processes will be part of your routine to ensure that data is cleansed and formatted appropriately for analysis. Developing interactive dashboards and reports that visualize key metrics and trends with Tableau and Power BI. Consulting with clients to provide guidance on utilizing BI solutions effectively and conducting user training sessions.<p>
+	   					<p>As an BI Technical Consultant and Data Analyst, my responsibilities encompass a wide range of tasks.<p>
 	   					<p>• Gather user requirements and understanding business needs in effectively utilizing Business Intelligence (BI) solutions.<p>
+						<p>• Create, optimize, and maintain Datamart structures to ensure efficient data retrieval and analysis.<p>
+						<p>• Design and Develop dashboard and report.<p>
+						<p>• Conduct SIT (System Integration Testing), UAT (User Acceptance Testing) with business teams, and conduct user training sessions.<p>
+						<p><b>Project:</b><p>
+						<p>- PT Bank Tabungan Negara Tbk (Managed Services) 2024 - 2025<p>
 					</div>
 
 	   			</div> <!-- /timeline-block -->
