--- a/index.html
+++ b/index.html
@@ -266,6 +266,9 @@
 						<p>• Conduct SIT (System Integration Testing), UAT (User Acceptance Testing) with business teams, and conduct user training sessions.<p>
 						<p><b>Project:</b><p>
 						<p>- PT Bank Tabungan Negara Tbk (Managed Services) 2024 - 2025<p>
+						<p>- PT Tempo Data System (Analysis Sales KPI Dashboard) 2023<p>
+						<p>- PT Antang Sawit Perkasa (Production Oil and Warehouse Dashboard) 2023<p>
+						<p>- PT Dua Berlian (Distribution Dashboard and SLA Dashboard) 2022<p>
 					</div>
 
 	   			</div> <!-- /timeline-block -->
@@ -283,8 +286,16 @@
 
 	   				<div class="timeline-content">
 	   					<h4>PT Mitra Solusi Telematika</h4>
-	   					<p>As a Software Developer, I have developed technical solutions to create an automatic process from the SAP system to tax reports, then carry out monitoring from the automatic system that has been created. I also support and monitor the Microsoft Power Apps application that has been created. I had the opportunity to work on exciting BI projects. My responsibilities included creating mockup layout visualizations using Power BI, analyzing client data, and assisting in the development of ETL for data in Tableau. I also created a range of dashboards tailored to client needs, including sales, inventory, CRM, and others. I played a crucial role in the development of Tableau for client servers, ensuring the
-smooth publishing of visualizations.<p>
+	   					<p>As a Software Developer, my responsibilities encompass a wide range of tasks.<p>
+	   					<p>• Gather user requirements and understanding business needs and translating them into solutions.<p>
+						<p>• Provided support and oversight for Microsoft Power Apps applications.<p>
+						<p>• Developed technical solutions to automate processes.<p>
+						<p>• Design and Develop dashboard and report.</p>
+						<p>• Conduct SIT (System Integration Testing), UAT (User Acceptance Testing) with business teams, and conduct user training sessions.<p>
+						<p><b>Project:</b><p>
+						<p>- PT MITRA SOLUSI TELEMATIKA (Developing an automated process to validate Purchase Orders (PO) from SAP MIGO within the Materials Management (MM) module) 2021<p>
+						<p>- PT TRAKINDO UTAMA (Sales Performance – EC Dashboard) 2021<p>
+						<p>- PT CIPTA KRIDATAMA (Interco PowerApps Invoice and Supporting Document Digitalization Enhancement) 2021<p>
 	   				</div>
 
 	   			</div> <!-- /timeline-block -->
@@ -302,7 +313,15 @@ smooth publishing of visualizations.<p>
 
 	   				<div class="timeline-content">
 	   					<h4>PT Arkana Solusi Teknologi</h4>
-	   					<p>During my tenure as a Business Intelligence Developer here, I had the opportunity to work on various exciting BI projects, where I contributed to creating insightful and impactful data visualizations using Tableau. My primary responsibilities included analyzing client data, developing ETL processes, and creating customized dashboards tailored to their specific needs. Through my expertise in Tableau, I was able to create compelling mockup layout visualizations that effectively communicated complex data insights to clients. Furthermore, I played a critical role in the deployment of Tableau for client servers, ensuring that the visualizations were published smoothly and accurately. Overall, my experience at PT Arkana Solusi Teknologi has equipped me with a diverse range of skills and</p>
+	   					<p>During my tenure as a Business Intelligence Developer here, I had the opportunity to work on a variety of interesting BI projects with responsibilities<p>
+	   					<p>• Gather user requirements and understanding business needs in effectively utilizing Business Intelligence (BI) solutions.<p>
+						<p>• Collaborate with ETL team regarding Datamart requirements.<p>
+						<p>• Design and Develop dashboard and report.<p>
+						<p>• Conduct SIT (System Integration Testing), UAT (User Acceptance Testing) with business teams, and conduct user training sessions.<p>
+						<p><b>Project:</b><p>
+						<p>- PT DERMA KONSEP ESTETIKA (Sales KPI Monitoring Dashboard) 2020<p>
+						<p>- PT LARIS CHANDRA (Inventory Dashboard) 2020<p>
+						<p>- PT CAHAYA ARIF ABADI (Coverage Network Dashboard) 2020</p>
 	   				</div>
 
 	   			</div> <!-- /timeline-block -->
