--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 
    				<img src="images/profile-pic.jpg" alt="Profile Picture">
 
-   				<p class="lead">Hi, my name is Riski. As a skilled Data Analyst and Data Visualization Engineer, experience in Business Intelligence implementation to support business decisions. Including full life cycle experience in performing user requirement, data modelling, analysis, design, configuration, testing and production support. I want to work with a dynamic and innovative team that values collaboration and creativity to deliver high quality solutions.</p>
+   				<p class="lead">Hello! I’m Riski Afrialam, a data enthusiast who enjoys uncovering patterns, solving problems, and transforming data into impactful decisions. With experience in analytics, dashboard development, and business intelligence, I aim to bridge data with strategy.</p>
    			</div>   			
 
    		</div>   		
@@ -99,7 +99,7 @@
    		<div class="col-six tab-full">
 
    			<h3>Profile</h3>
-   			<p>Experienced BI consultant with a history of work in the information technology and services industry. Skilled in visualizing data with Tableau, Power BI and several other expertise in web development, database and graphic design. Strong information technology professional with a Bachelor's degree focusedon Information Technology.</p>
+   			<p>I’m a Data Analyst with a passion for turning raw data into meaningful insights. Skilled in SQL, Python, and data visualization tools like Power BI and Tableau. Currently open to new opportunities to help businesses make data-driven decisions.</p>
 
    			<ul class="info-list">
    				<li>
