--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
    		<div class="col-six tab-full">
 
    			<h3>Profile</h3>
-   			<p>I’m a Data Analyst with a passion for turning raw data into meaningful insights. Skilled in SQL, Python, and data visualization tools like Power BI and Tableau. Currently open to new opportunities to help businesses make data-driven decisions.</p>
+   			<p>Data Analyst with a passion for turning raw data into meaningful insights. Skilled in SQL, Python, and data visualization tools like Power BI and Tableau. Currently open to new opportunities to help businesses make data-driven decisions.</p>
 
    			<ul class="info-list">
    				<li>
